tests/errors/syn_method29.java
public class syn_method29 {
public static void main ( {
 
}
}